--- a/src/pages/admin.astro
+++ b/src/pages/admin.astro
@@ -19,8 +19,16 @@ const config = {
   logo_url: "https://nebulix.unfolding.io/logo.svg",
   local_backend: true,
   backend: {
-    name: "test-repo",
-  },
+		name: 'github',
+		repo: 'dancarlson/all41',
+		commit_messages: {
+			create: 'Create {{collection}} "{{slug}}"',
+			update: 'Update {{collection}} "{{slug}}"',
+			delete: 'Delete {{collection}} "{{slug}}"',
+			uploadMedia: 'Upload "{{path}}"',
+			deleteMedia: 'Delete "{{path}}"'
+		}
+	},
   search: true,
   media_folder: "src/assets",
   public_folder: "/src/assets",
